--- a/Task Manager/Views/Ticket/CreateTicket.cshtml
+++ b/Task Manager/Views/Ticket/CreateTicket.cshtml
@@ -19,7 +19,7 @@
 
 }
 @*<link href="~/Content/select2.css" rel="stylesheet" />
-<link href="~/Content/select2-bootstrap.css" rel="stylesheet" />*@
+    <link href="~/Content/select2-bootstrap.css" rel="stylesheet" />*@
 <div id="wrapper">
     <!-- Navigation -->
     <div id="page-wrapper">
@@ -37,83 +37,82 @@
                         Create Tickets
                     </div>
                     <div class="panel-body" ng-controller="tickctrl">
-                        <div class="row">
-                            <div class=" col-lg-offset-3 col-lg-6">
-                                <div class="col-lg-12 spacing">
-                                    <div class="col-lg-6 ">
-                                        <label>Name</label>
-                                        <input type="hidden" id="tick_id" value="0" />
-                                    </div>
-                                    <div class="col-lg-6 ">
-                                        <input type="hidden" id="cust_id" value="0" />
-                                        <input class="form-control" type="text" value="{{task.task.task_name}}" >
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-12 spacing">
-                                    <div class="col-lg-6 ">
-                                        <label>Customer Name</label>
-                                    </div>
-                                    <div class="col-lg-6 ">
-                                        <select name="repeatSelect" id="repeatSelect" ng-model="customerSelected">
-                                            <option ng-repeat="customer in customers" value="{{customer.customerId}}">{{customer.name}}</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 spacing">
-                                    <div class="col-lg-6">
-                                        <label>Project Name</label>
-                                    </div>
-                                    <div class="col-lg-6 ">
-                                        <select name="repeatSelect" id="repeatSelect" ng-model="projectSelected">
-                                            <option ng-repeat="project in projects" value="{{project.id}}" ng-selected="5=={{project.id}}">{{project.projectName}}</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 spacing">
-                                    <div class="col-lg-6">
-                                        <label>Issue</label>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <textarea class="form-control" type="text" id="Desc" cols="22" rows="2"> {{task.task.description}}</textarea>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-12 spacing">
-                                    <div class="col-lg-6">
-                                        <label>Assigned To</label>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="dropdown">
-                                            <multiple-autocomplete ng-model="selectedList"
-                                                                   object-property="name"
-                                                                   suggestions-arr="optionsList">
-                                            </multiple-autocomplete>
+                        <form ng-submit="Add()">
+                            <div class="row">
+                                <div class=" col-lg-offset-3 col-lg-6">
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6 ">
+                                            <label>Name</label>
+                                            <input type="hidden" ng-model="task.task.id" />
+                                        </div>
+                                        <div class="col-lg-6 ">
+                                            <input type="hidden" id="cust_id" value="0" />
+                                            <input class="form-control" type="text" ng-model="task.task.task_name">
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-12 spacing">
-                                    <div class="col-lg-6">
-                                        <label>Remind By</label>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <label class="checkbox-inline">
-                                            <input type="checkbox" id="chkSMS"> SMS
-                                        </label>
-                                        <label class="checkbox-inline">
-                                            <input type="checkbox" id="chkEmail">  Email
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-lg-offset-6 col-lg-6 spacing">
-                                    <input type="button" class="btn btn-success" onclick="Add()" id="button" value="Create" />
-                                    <input type="button" class="btn btn-info" value="Reset" onclick="location.reload();">
-                                </div>
 
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6 ">
+                                            <label>Customer Name</label>
+                                        </div>
+                                        <div class="col-lg-6 ">
+                                            <select ng-options="customer.id as customer.name for customer in customers" ng-model="customerId"></select>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6">
+                                            <label>Project Name</label>
+                                        </div>
+                                        <div class="col-lg-6 ">
+                                            <select ng-options="project.id as project.name for project in projects" ng-model="projectId"></select>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6">
+                                            <label>Issue</label>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" ng-model="task.task.description"> </textarea>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6">
+                                            <label>Assigned To</label>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="dropdown">
+                                                <multiple-autocomplete ng-model="selectedList"
+                                                                       object-property="name"
+                                                                       suggestions-arr="optionsList">
+                                                </multiple-autocomplete>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 spacing">
+                                        <div class="col-lg-6">
+                                            <label>Remind By</label>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" ng-model="task.task.sms" ng-checked="task.task.sms"> SMS
+                                            </label>
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" ng-model="task.task.email" ng-checked="task.task.email">  Email
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-offset-6 col-lg-6 spacing">
+                                        <input type="submit" class="btn btn-success" value="Create/Update" />
+                                        <input type="button" class="btn btn-info" value="Reset" onclick="location.reload();">
+                                    </div>
+
+                                </div>
+                                <!-- /.col-lg-6 (nested) -->
+                                <!-- /.col-lg-6 (nested) -->
                             </div>
-                            <!-- /.col-lg-6 (nested) -->
-                            <!-- /.col-lg-6 (nested) -->
-                        </div>
+                        </form>
                         <!-- /.row (nested) -->
                     </div>
                     <!-- /.panel-body -->
@@ -133,142 +132,101 @@
 
     var app = angular.module("ticket", ['multipleSelect']);
 
-    app.controller("tickctrl", function ($scope,$http) {
+    app.controller("tickctrl", function ($scope, $http) {
+
 
         $scope.message = $http.get('/api/angularApi/').then(function (response) {
             $scope.task = response.data;
             $scope.selectedList = $scope.task.tags;
-            console.log($scope.task.projectId);
+
         });
 
-        $scope.message = $http.get('/api/CustomerApi/').then(function (response) {
+        $scope.message = $http.get('/api/angularApi/' + 0).then(function (response) {
             $scope.customers = response.data;
-       
-
+            console.log($scope.customers);
 
         });
 
-        $scope.message = $http.get('/api/ProjectApi/').then(function (response) {
+        $scope.message = $http.post('/api/angularApi/' + 0).then(function (response) {
             $scope.projects = response.data;
-         
-       
-        });
 
+        });
         $scope.message = $http.post('/api/angularApi/').then(function (response) {
-            $scope.optionsList  = response.data;
-      
-
-         
-
-        });
-    });
-
-
-
-    //$(document).ready(function () {
-    //    globalProjects = [];
-    //    dat = [];
-    //    $.ajax({
-    //        async: true,
-    //        url: '/api/TicketApi/'+0,
-    //        type: 'GET',
-    //        success: function (data) {
-    //            console.log(data);
-    //            $.each(data.dropdowns.customer, function (i) {
-    //                $('#CustomerDropdown').append($('<option></option>').val(data.dropdowns.customer[i].customerId).html(data.dropdowns.customer[i].customer_name));
-    //            });
-    //            globalProjects = data.dropdowns.projects;
-    //            $.each(data.dropdowns.projects, function (i) {
-    //                $('#ProjectDropdown').append($('<option></option>').val(data.dropdowns.projects[i].id).html(data.dropdowns.projects[i].Project_Name));
-    //            });
-    //            for (var i = 0; i < data.dropdowns.Users.length; i++) {
-    //                var obj = { id: data.dropdowns.Users[i].id, text: data.dropdowns.Users[i].user_Name }
-    //                dat.push(obj);
-    //            }
-    //            $("#test").select2({ theme: "bootstrap", data: dat });
-    //            if (data.task != null) {
-    //                console.log(data.task);
-    //                document.getElementById("tick_id").value = data.task.id
-    //                document.getElementById("ticketName").value = data.task.task_name;
-    //                document.getElementById("CustomerDropdown").value = data.projectId;
-    //                document.getElementById("Desc").value = data.task.description;
-    //                document.getElementById("chkSMS").checked = data.task.sms;
-    //                document.getElementById("chkEmail").checked = data.task.email;
-    //                document.getElementById("button").value = "Update";
-    //                $('#test').val(data.tags).trigger('change');
-    //            }
-    //        },
-    //        failure: function () {
-    //            alert("Failed to load Projects");
-    //        }
-    //    });
-
-
-    //});
-    //add user button press for adding or updating db
-    //need correction when updating probably
-    function Add() {
-
-        var user = $("#test").select2("val");
-        console.log(user);
-
-        var uname = document.getElementById("ticketName").value.trim();
-        var project = document.getElementById("ProjectDropdown").value.trim();
-        var issue = document.getElementById("Desc").value.trim();
-        if (uname == "") { alert("Please enter User Name"); }
-        else if (issue == "") { alert("Please Enter the issue"); }
-        var model =
-    {
-        id: $("#tick_id").val(),
-        uname: $("#ticketName").val(),
-        projectId: $("#ProjectDropdown").val(),
-        issue: $("#Desc").val(),
-        email: document.getElementById("chkEmail").checked,
-        sms: document.getElementById("chkSMS").checked,
-        assignedto: user
-
-    };
-        console.log(model);
-
-        $.ajax({
-            url: '/api/TicketApi',
-            type: 'POST',
-            data: JSON.stringify(model),
-            contentType: "text/json;charset=utf-8",
-            dataType: "json",
-            success: function (data) {
-                alert(data);
-                document.getElementById("tick_id").value = "",
-                 document.getElementById("ticketName").value = "",
-                 document.getElementById("Desc").value = "",
-                // document.getElementById('#tick_id').value = "",
-                // document.getElementById('#tick_id').value = "",
-
-                //$("#ProjectDropdown").val()= null,
-
-                document.getElementById("chkEmail").checked = "",
-                document.getElementById("chkSMS").checked = ""
-            },
-            error: function (error) { alert(error); }
+            $scope.optionsList = response.data;
         });
 
 
 
-    }
 
-    function getval(val) {
+        //$(document).ready(function () {
+        //    globalProjects = [];
+        //    dat = [];
+        //    $.ajax({
+        //        async: true,
+        //        url: '/api/TicketApi/'+0,
+        //        type: 'GET',
+        //        success: function (data) {
+        //            console.log(data);
+        //            $.each(data.dropdowns.customer, function (i) {
+        //                $('#CustomerDropdown').append($('<option></option>').val(data.dropdowns.customer[i].customerId).html(data.dropdowns.customer[i].customer_name));
+        //            });
+        //            globalProjects = data.dropdowns.projects;
+        //            $.each(data.dropdowns.projects, function (i) {
+        //                $('#ProjectDropdown').append($('<option></option>').val(data.dropdowns.projects[i].id).html(data.dropdowns.projects[i].Project_Name));
+        //            });
+        //            for (var i = 0; i < data.dropdowns.Users.length; i++) {
+        //                var obj = { id: data.dropdowns.Users[i].id, text: data.dropdowns.Users[i].user_Name }
+        //                dat.push(obj);
+        //            }
+        //            $("#test").select2({ theme: "bootstrap", data: dat });
+        //            if (data.task != null) {
+        //                console.log(data.task);
+        //                document.getElementById("tick_id").value = data.task.id
+        //                document.getElementById("ticketName").value = data.task.task_name;
+        //                document.getElementById("CustomerDropdown").value = data.projectId;
+        //                document.getElementById("Desc").value = data.task.description;
+        //                document.getElementById("chkSMS").checked = data.task.sms;
+        //                document.getElementById("chkEmail").checked = data.task.email;
+        //                document.getElementById("button").value = "Update";
+        //                $('#test').val(data.tags).trigger('change');
+        //            }
+        //        },
+        //        failure: function () {
+        //            alert("Failed to load Projects");
+        //        }
+        //    });
 
-        var check = 0;
-        for (var i = 0; i < globalProjects.length; i++) {
-            if (globalProjects[i].customer.customerId == val.value) {
-                if (check == 0) {
-                    check = 1;
-                    document.getElementById('ProjectDropdown').options.length = 0;
+
+        //});
+        //add user button press for adding or updating db
+        //need correction when updating probably
+        $scope.Add = function () {
+
+            $scope.new = {};
+            $scope.new.uname = $scope.task.task.task_name;
+            $scope.new.id = $scope.task.task.id;
+            $scope.new.issue = $scope.task.task.description;
+            $scope.new.email = $scope.task.task.email;
+            $scope.new.sms = $scope.task.task.sms;
+            $scope.new.projectId = $scope.projectId;
+            $scope.new.assignedTo = $scope.selectedList;
+            console.log($scope.new);
+            $scope.message = $http.post('/api/ticketApi/', $scope.new).then(function (response) {
+                console.log(response.data);
+                alert("Task Added Sucessfully");
+            });
+
+        }
+
+        $scope.getval = function (val) {
+
+            $scope.projecttemp = [];
+            for (var i = 0; i < $scope.projects.length; i++) {
+                if ($scope.projects[i].custId == val.value) {
+                    $scope.pojecttemp.push($scope.projects[i]);
                 }
-                var option = document.createElement("option");
-                option.text = globalProjects[i].Project_Name;
-                option.value = globalProjects[i].id;
-                document.getElementById('ProjectDropdown').add(option);
             }
-    }}
+            console.log($scope.projecttemp);
+        }
+    });
 </script>
